<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:elevation="@dimen/dp4"
  android:paddingBottom="@dimen/dp16"
  android:theme="@style/Theme.StupidSimpleApp">


  <ImageView
    android:id="@+id/user_detail__btn__close"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp16"
    android:contentDescription="@string/user_detail__close_desc"
    android:src="@drawable/ic_close"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/user_detail__label__main_title"
    style="@style/Text.Bold.Body1"
    android:layout_width="@dimen/dp0"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp16"
    android:text="@string/user_detail__title_screen"
    app:layout_constraintBottom_toBottomOf="@id/user_detail__btn__close"
    app:layout_constraintEnd_toStartOf="@id/user_detail__btn__close"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/user_detail__btn__close" />

  <View
    android:id="@+id/user_detail__separator__age_description"
    style="@style/Divider"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp1"
    android:layout_marginTop="@dimen/dp16"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/user_detail__label__main_title" />

  <androidx.core.widget.NestedScrollView
    android:id="@+id/user_detail__nested_scroll"
    android:layout_width="@dimen/dp0"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp20"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/user_detail__btn__close">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
        android:id="@+id/user_detail__image__user_image"
        android:layout_width="@dimen/dp72"
        android:layout_height="@dimen/dp72"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:contentDescription="@string/user_list__user_photo_description"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

      <TextView
        android:id="@+id/user_detail__label__full_name"
        style="@style/Text.Bold.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        app:layout_constraintStart_toEndOf="@+id/user_detail__image__user_image"
        app:layout_constraintTop_toTopOf="@+id/user_detail__image__user_image"
        tools:text="Carmen Morales" />

      <TextView
        android:id="@+id/user_detail__birthday"
        style="@style/Text.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        app:layout_constraintBottom_toBottomOf="@+id/add_user__save_btn"
        app:layout_constraintStart_toEndOf="@+id/user_detail__image__user_image"
        app:layout_constraintTop_toTopOf="@+id/add_user__save_btn"
        tools:text="19/08/1998" />

      <TextView
        android:id="@+id/user_detail__label__description_title"
        style="@style/Text.Bold.Body2.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:text="@string/user_detail__example_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_detail__image__user_image" />

      <TextView
        android:id="@+id/user_detail__label__description"
        style="@style/Text.Regular.Body1"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="@string/user_detail__example_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_detail__label__description_title"
        tools:text="@tools:sample/lorem/random" />


      <TextView
        android:id="@+id/user_detail__label__extra_info_title"
        style="@style/Text.Bold.Body2.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:text="@string/user_detail__example_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_detail__label__description" />

      <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/user_detail__edit_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/user_detail__image__user_image"
        app:layout_constraintTop_toTopOf="@+id/user_detail__image__user_image"
        tools:visibility="visible" />

      <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/user_detail__edit_bday_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/user_detail__edit_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/user_detail__edit_placeholder"
        tools:visibility="visible" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/add_user__save_btn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp48"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/user_detail__edit_btn"
        app:layout_constraintBottom_toBottomOf="@+id/user_detail__image__user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_detail__image__user_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

  <include
    android:id="@+id/user_detail__include__loading"
    layout="@layout/loading"
    android:layout_width="@dimen/dp0"
    android:layout_height="@dimen/dp0"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>