<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.fragment.AddUserFragment">

  <Button
    android:id="@+id/add_user__save_btn"
    style="@style/Widget.Material3.Button"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/dp48"
    android:layout_marginEnd="@dimen/dp8"
    android:layout_marginTop="@dimen/dp16"
    android:text="@string/user_detail__save_user_info_btn"
    android:textSize="@dimen/sp14"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/add_user__date_placeholder" />

  <TextView
    android:id="@+id/add_user__text_title"
    style="@style/Text.Bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp16"
    android:text="@string/user_add_dialog_title"
    android:textSize="@dimen/sp16"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/add_user__date_placeholder"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/dp8"
    android:layout_marginStart="@dimen/dp8"
    android:layout_marginTop="@dimen/dp16"
    android:clickable="true"
    android:clipToPadding="true"
    android:enabled="false"
    android:focusable="true"
    app:endIconMode="custom"
    android:hint="10/11/2022"
    app:endIconDrawable="@drawable/ic_monthly_calendar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/add_user__name_placeholder"
    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/add_user__name_placeholder"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/dp8"
    android:layout_marginStart="@dimen/dp8"
    android:layout_marginTop="@dimen/dp16"
    android:clickable="true"
    app:endIconMode="custom"
    app:endIconDrawable="@drawable/ic_user_add"
    android:clipToPadding="true"
    android:hint="@string/user_list__user_name_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/add_user__text_title"
    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>